# midi-tools

./: .editorconfig  .gitignore  README.md  biome.json  components.json  index.html  netlify.toml  next-env.d.ts  package.json  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
components/: Button.tsx  Error.tsx  FormField.tsx  Input.tsx  Layout.tsx  MidiDeviceSelector.tsx  NumericInput.tsx  Select.tsx  Slider.tsx  Spinner.tsx
components/hooks/: useLocalStorageState.js
pages/: _app.tsx  midi-monitor.tsx
public/: index.html  manifest.json  worker.js
rtpmidi/: client.py  pyproject.toml  server.py
src/: App.js  App.tsx  Routes.js  main.css  main.tsx
src/app-components/: MidiDeviceProperties.js  MidiDeviceSelector.js  MidiSelector.js
src/components/: AppError.tsx  AppSpinner.tsx  Button.js  Checkbox.js  Error.js  FormField.tsx  Header.js  Input.js  Knob.js  Knob.tsx  Layout.js  Layout.tsx  MidiChannelSelector.tsx  MidiDeviceSelector.tsx  MidiPiano.tsx  NavBar.js  NoSSR.tsx  NumericInput.js  Pre.js  Select.js  Select.tsx  Slider.js  Spinner.js  TimerWorker.ts  Toaster.tsx  WakeLock.tsx  WebMidi.tsx  classNames.ts  timer.ts  worker.js
src/hooks/: useAnimationState.js  useLocalStorageState.js  useThrottle.js  useWebMidi.js  useWebMidiDevices.js
src/main-components/: MidiDevices.tsx  MidiMonitor.tsx  MidiRouter.tsx
src/pages/: Home.tsx  MidiInstrument.js  MidiMonitor.js  MidiMonitor.tsx  MidiPlayer.tsx  MidiSynth.tsx  MidiTransmitter.js  MidiTransmitter.tsx  Synth.js  _app.tsx  index.tsx  timer.js  (+6 more)
styles/: tailwind.css
(+23 files in other folders)
